--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
             impactScoreMultiplier: 10, // Adjusts how much projects/awards count towards total impact
             
             // --- INTRODUCTION & BRANDING FIELDS ---
-            photoUrl: "https://placehold.co/150x150/BA0C2F/FFFFFF/png?text=RILEY+C", // Replace with a URL to a professional headshot
+            photoUrl: "./IMG_0453.JPG.png?text=CHARLIE+C", // Replace with a URL to a professional headshot
             logoUrl: "https://placehold.co/40x40/BA0C2F/FFFFFF.png?text=BSU", // URL for your school logo or personal brand icon
             personalBio: "I am a freshmen whos major is Property Managment. I am greatful and excited to get the oppurunity to pursue my carrer at Ball State University.",
             missionStatement: "To build digital solutions that simplify complex processes and empower small businesses, leveraging Python, front-end frameworks, and a user-first design approach.",
@@ -576,5 +576,6 @@ CONFIRMATION: NO SVG graphics used. NO Mermaid JS used. -->
     </script>
 </body>
 </html>
+
 
 
